welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:18: error: overloaded method value - with alternatives:
  (x: Int)Int <and>
  (x: Char)Int <and>
  (x: Short)Int <and>
  (x: Byte)Int
 cannot be applied to (String)
			x = pas-colonne+1-litMessage()
                                         ^